# roboBase

./: CMakeLists.txt  README.md  evn_setup_test.sh  setUp_NOT_in_Nano.sh
RobotBase/: common.h  main.cpp
RobotBase/Robogrinder_SDK/: message.h  serial_port.cpp  serial_port.h
RobotBase/ThreadManagement/: Thread_management.cpp  Thread_management.h
RobotBase/vision/: big_buff.cpp  control.h  vision_main.cpp
RobotBase/vision/autoAim/: Armor.cpp  Armor.h  ArmorFilter.cpp  ArmorFilter.h  armor.cpp  armor.h  autoAim.cpp  autoAim.h
RobotBase/vision/autoAim/auto_aim_test/: AutoAimTester.cpp
RobotBase/vision/auto_aim_test/: .gitignore  Aim_Test.cpp  CMakeLists.txt
RobotBase/vision/bigbuff/: BigbuffDetection.cpp  BigbuffDetection.h
RobotBase/vision/cam/: Daheng.cpp  Daheng.h
